<resources>
	<string name="app_name" translatable="false">Okkei Patcher</string>
	<string name="game_title" translatable="false">CHAOS;CHILD</string>
	<string name="percent_done" translatable="false">%d%%</string>
	<string name="not_available">N/A</string>
	<string name="about_screen_source_code_link" translatable="false">https://github.com/solrudev/OkkeiPatcher</string>
	<string name="about_screen_version">Version %s\nby solrudev\nDesign by elmisa</string>
	<string name="button_text_abort_process">Abort process</string>
	<string name="button_text_abort">Abort</string>
	<string name="button_text_cancel">Cancel</string>
	<string name="button_text_clear">Clear</string>
	<string name="button_text_copy_to_clipboard">Copy to clipboard</string>
	<string name="button_text_grant">Grant</string>
	<string name="button_text_granted">Granted</string>
	<string name="button_text_ok">OK</string>
	<string name="button_text_patch">Patch game</string>
	<string name="button_text_restore">Restore</string>
	<string name="button_text_source_code">Source code</string>
	<string name="button_text_start">Start</string>
	<string name="button_text_update">Update</string>
	<string name="button_text_update_cancel">Cancel</string>
	<string name="button_text_update_install">Install</string>
	<string name="button_text_update_patch">Update patch</string>
	<string name="card_app_version">Version: %s</string>
	<string name="card_changelog_title">Changelog</string>
	<string name="card_patch_version">Patch: %s</string>
	<string name="error">Error</string>
	<string name="error_apk_not_found">APK to be installed was not found.</string>
	<string name="error_backup_not_found">Backup of CHAOS;CHILD was not found.</string>
	<string name="error_binary_patch_failed">Binary patch failed. Error code: %1$d\nFile path: %2$s</string>
	<string name="error_game_not_found">CHAOS;CHILD was not found on this device.</string>
	<string name="error_game_version_not_supported">Installed CHAOS;CHILD version is not supported.</string>
	<string name="error_hash_obb_mismatch">OBB is corrupted.</string>
	<string name="error_hash_obb_patches_mismatch">OBB patches are corrupted.</string>
	<string name="error_hash_scripts_mismatch">Scripts are corrupted.</string>
	<string name="error_incompatible_apk">APK patch is incompatible with the installed game. Ensure you own a legal copy of the game.</string>
	<string name="error_incompatible_obb">OBB patch is incompatible with the installed game. Ensure you own a legal copy of the game.</string>
	<string name="error_install">An error occurred while installing APK.</string>
	<string name="error_install_with_reason">An error occurred while installing APK.\n%s</string>
	<string name="error_no_free_space">Not enough free disk space. Ensure that you have at least 4 GB of free space.</string>
	<string name="error_no_network">Network is not available.</string>
	<string name="error_not_patched">CHAOS;CHILD hasn\'t been patched yet.</string>
	<string name="error_not_trustworthy_apk">APK to be installed might be not created by Okkei Patcher.</string>
	<string name="error_obb_not_found">OBB file was not found.</string>
	<string name="error_patched">CHAOS;CHILD is already patched.</string>
	<string name="error_uninstall">CHAOS;CHILD was not uninstalled.</string>
	<string name="error_uninstall_with_reason">CHAOS;CHILD was not uninstalled.\n%s</string>
	<string name="error_update_app_corrupted">Okkei Patcher update is corrupted.</string>
	<string name="notification_channel_messages_id" translatable="false">OkkeiPatcher_Messages_NotificationChannel</string>
	<string name="notification_channel_messages_description">Display warnings and messages</string>
	<string name="notification_channel_messages_name">Messages</string>
	<string name="notification_channel_progress_id" translatable="false">OkkeiPatcher_Progress_NotificationChannel</string>
	<string name="notification_channel_progress_description">Display current status and progress</string>
	<string name="notification_channel_progress_name">Status and progress</string>
	<string name="notification_message_downloading_update_failed">Failed to download Okkei Patcher update. Press to learn more.</string>
	<string name="notification_message_downloading_update_success">Okkei Patcher update was successfully downloaded.</string>
	<string name="notification_message_install">Please confirm installation of %s.</string>
	<string name="notification_message_patch_failed">Failed to patch CHAOS;CHILD. Press to learn more.</string>
	<string name="notification_message_patch_success">CHAOS;CHILD was successfully patched.</string>
	<string name="notification_message_restore_failed">Failed to restore CHAOS;CHILD backup. Press to learn more.</string>
	<string name="notification_message_restore_success">CHAOS;CHILD backup was successfully restored.</string>
	<string name="notification_message_uninstall">Please confirm uninstallation of %s.</string>
	<string name="notification_title_downloading_update">Downloading update</string>
	<string name="notification_title_install">Installation</string>
	<string name="notification_title_patch">Patching</string>
	<string name="notification_title_restore">Restoring</string>
	<string name="notification_title_downloading_update_failed">Download failed</string>
	<string name="notification_title_downloading_update_success">Update ready</string>
	<string name="notification_title_patch_completed">Patching completed</string>
	<string name="notification_title_restore_completed">Restoring completed</string>
	<string name="notification_title_uninstall">Uninstallation</string>
	<string name="patch_status_not_patched">Patch for CHAOS;CHILD is not installed</string>
	<string name="patch_status_patched">Latest patch version is installed</string>
	<string name="patch_status_update_available">Patch update is available!</string>
	<string name="permissions_description">These permissions are required for Okkei Patcher to work</string>
	<string name="permission_install_title">Packages install</string>
	<string name="permission_install_description">For installing and uninstalling CHAOS;CHILD, game files access</string>
	<string name="permission_notifications_title">Notifications</string>
	<string name="permission_notifications_description">For sending notifications about work progress and warnings</string>
	<string name="permission_save_data_access_title">Save data access</string>
	<string name="permission_save_data_access_description">On Android 11+ special permission is needed to access CHAOS;CHILD\'s save data. After pressing the Grant button click \"Use this folder\" and then allow access.</string>
	<string name="permission_storage_title">Storage access</string>
	<string name="permission_storage_description">For access to CHAOS;CHILD data, needed for patching, backing up and restoring</string>
	<string name="preference_key_about" translatable="false">about</string>
	<string name="preference_key_clear_data" translatable="false">clear_data</string>
	<string name="preference_key_handle_save_data" translatable="false">handle_save_data</string>
	<string name="preference_key_licenses" translatable="false">licenses</string>
	<string name="preference_key_operation_mode" translatable="false">operation_mode</string>
	<string name="preference_key_patch_api_url" translatable="false">patch_api_url</string>
	<string name="preference_key_theme" translatable="false">theme</string>
	<string name="preference_key_updates_app" translatable="false">check_app_updates</string>
	<string name="preference_key_updates_patch" translatable="false">check_patch_updates</string>
	<string name="preference_appearance_header">Appearance</string>
	<string name="preference_miscellaneous_header">Miscellaneous</string>
	<string name="preference_updates_header">Updates</string>
	<string name="preference_patcher_header">Patcher</string>
	<string name="preference_about_title">About</string>
	<string name="preference_clear_data_title">Clear all data</string>
	<string name="preference_save_data_title">Game save data</string>
	<string name="preference_licenses_title">Licenses</string>
	<string name="preference_operation_mode_title">Operation mode</string>
	<string name="preference_operation_mode_non_root">Non-root</string>
	<string name="preference_operation_mode_root">Root</string>
	<string name="preference_operation_mode_shizuku">Shizuku</string>
	<string name="preference_operation_mode_summary">%s mode is used for package install/uninstall and file operations</string>
	<string name="preference_patch_api_url_title">Patch API URL</string>
	<string name="preference_theme_title">App theme</string>
	<string name="preference_updates_app_title">App</string>
	<string name="preference_updates_patch_title">Patch</string>
	<string name="preference_clear_data_summary">Use this ONLY when reinstalling CHAOS;CHILD due to data damage</string>
	<string name="preference_patch_api_url_summary">Base URL for patch metadata backend API</string>
	<string name="preference_save_data_summary_off">Game save data is not backed up or restored</string>
	<string name="preference_save_data_summary_on">Game save data is backed up and restored</string>
	<string name="preference_updates_app_summary_off">App updates are not checked automatically</string>
	<string name="preference_updates_app_summary_on">App updates are checked automatically</string>
	<string name="preference_updates_patch_summary_off">Patch updates are not checked automatically</string>
	<string name="preference_updates_patch_summary_on">Patch updates are checked automatically</string>
	<string name="preference_follow_system_theme">Follow system settings</string>
	<string name="preference_light_theme">Light</string>
	<string name="preference_dark_theme">Dark</string>
	<string name="screen_title_patcher">Patcher</string>
	<string name="screen_title_permissions">Permissions</string>
	<string name="screen_title_settings">Settings</string>
	<string name="screen_title_update">Update</string>
	<string name="snackbar_data_cleared">All data cleared</string>
	<string name="snackbar_error_clear_data">There was an error clearing data</string>
	<string name="status_backing_up_apk">Backing up APK</string>
	<string name="status_backing_up_obb">Backing up OBB</string>
	<string name="status_backing_up_save_data">Backing up save data</string>
	<string name="status_checking">Checking</string>
	<string name="status_comparing_apk">Comparing APK checksums</string>
	<string name="status_comparing_obb">Comparing OBB checksums</string>
	<string name="status_comparing_saves">Comparing save data checksums</string>
	<string name="status_downloading_obb_patches">Downloading OBB patches</string>
	<string name="status_downloading_scripts">Downloading scripts</string>
	<string name="status_extracting_scripts">Extracting scripts</string>
	<string name="status_installing">Installing</string>
	<string name="status_patching_obb">Patching OBB</string>
	<string name="status_persisting_save_data">Persisting save data</string>
	<string name="status_replacing_scripts">Replacing scripts</string>
	<string name="status_restoring_obb">Restoring OBB</string>
	<string name="status_restoring_saves">Restoring save data</string>
	<string name="status_signing_apk">Signing APK</string>
	<string name="status_succeeded">Work succeeded</string>
	<string name="status_uninstalling">Uninstalling</string>
	<string name="toast_copied_to_clipboard">Copied to clipboard</string>
	<string name="toast_shizuku_permission_denied">Shizuku permission was denied</string>
	<string name="toast_shizuku_service_not_running">Shizuku service is not running</string>
	<string name="update_status_awaiting_installation">Update is ready to be installed</string>
	<string name="update_status_canceled">Update was canceled</string>
	<string name="update_status_update_available">App update is available!</string>
	<string name="warning_clear_data_title">Clear data?</string>
</resources>