<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Okkei Patcher
  ~ Copyright (C) 2023 Ilya Fomichev
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/settings_nav_graph"
	app:startDestination="@id/settings_fragment">

	<fragment
		android:id="@+id/settings_fragment"
		android:name="ru.solrudev.okkeipatcher.ui.main.screen.settings.SettingsFragment"
		android:label="@string/screen_title_settings">
		<action
			android:id="@+id/action_settingsFragment_to_saveDataAccessFragment"
			app:destination="@id/save_data_access_fragment" />
		<action
			android:id="@+id/action_settingsFragment_to_clearDataFragment"
			app:destination="@id/clear_data_fragment" />
		<action
			android:id="@+id/action_settingsFragment_to_aboutFragment"
			app:destination="@id/about_fragment"
			app:enterAnim="@anim/slide_transition_enter"
			app:exitAnim="@anim/slide_transition_exit"
			app:popEnterAnim="@anim/slide_transition_pop_enter"
			app:popExitAnim="@anim/slide_transition_pop_exit" />
		<action
			android:id="@+id/action_settingsFragment_to_licensesFragment"
			app:destination="@id/licenses_fragment"
			app:enterAnim="@anim/slide_transition_enter"
			app:exitAnim="@anim/slide_transition_exit"
			app:popEnterAnim="@anim/slide_transition_pop_enter"
			app:popExitAnim="@anim/slide_transition_pop_exit" />
	</fragment>
	<fragment
		android:id="@+id/about_fragment"
		android:name="ru.solrudev.okkeipatcher.ui.main.screen.about.AboutFragment"
		android:label="@string/preference_about_title"
		tools:layout="@layout/fragment_about" />
	<fragment
		android:id="@+id/licenses_fragment"
		android:name="ru.solrudev.okkeipatcher.ui.main.screen.licenses.LicensesFragment"
		android:label="@string/preference_licenses_title"
		tools:layout="@layout/fragment_licenses" />
	<dialog
		android:id="@+id/save_data_access_fragment"
		android:name="ru.solrudev.okkeipatcher.ui.main.screen.settings.savedataaccess.SaveDataAccessFragment"
		android:label="@string/permission_save_data_access_title" />
	<dialog
		android:id="@+id/clear_data_fragment"
		android:name="ru.solrudev.okkeipatcher.ui.main.screen.settings.cleardata.ClearDataFragment"
		android:label="@string/warning_clear_data_title" />

</navigation>