<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="@dimen/card_margin">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="@dimen/card_padding">

		<TextView
			android:id="@+id/textView_permission_title"
			style="?textAppearanceListItem"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/text_margin_end"
			android:layout_marginBottom="@dimen/text_paragraph_margin"
			app:layout_constraintBottom_toTopOf="@id/textView_permission_description"
			app:layout_constraintEnd_toStartOf="@+id/button_permission_grant"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:text="@string/permission_storage_title" />

		<TextView
			android:id="@+id/textView_permission_description"
			style="?textAppearanceListItemSecondary"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/text_margin_end"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/button_permission_grant"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/textView_permission_title"
			tools:text="@string/permission_storage_description" />

		<Button
			android:id="@+id/button_permission_grant"
			style="?borderlessButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_text_grant"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>