<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Okkei Patcher
  ~ Copyright (C) 2023 Ilya Fomichev
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container_card_update"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="@dimen/card_margin"
	android:animateLayoutChanges="true"
	app:cardPreventCornerOverlap="false"
	tools:showIn="@layout/fragment_home">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:animateLayoutChanges="true"
		android:paddingHorizontal="@dimen/card_padding_horizontal"
		android:paddingVertical="@dimen/card_padding_vertical">

		<ImageView
			android:id="@+id/imageview_card_update_icon"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/patch_status_icon_start_margin"
			android:importantForAccessibility="no"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/ic_sparkles" />

		<TextView
			android:id="@+id/textview_card_update_status"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/card_padding_horizontal"
			android:textAppearance="?textAppearanceTitleMedium"
			app:layout_constrainedWidth="true"
			app:layout_constraintBottom_toTopOf="@id/button_card_update"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0"
			app:layout_constraintStart_toEndOf="@id/imageview_card_update_icon"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_chainStyle="packed"
			tools:text="@string/update_status_update_available" />

		<ru.solrudev.okkeipatcher.ui.widget.AbortButton
			android:id="@+id/button_card_update"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/button_margin_vertical"
			android:minHeight="@dimen/button_update_height"
			app:abortText="@string/button_text_update_cancel"
			app:text="@string/button_text_update"
			style="?materialButtonOutlinedStyle"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="@id/textview_card_update_status"
			app:layout_constraintStart_toStartOf="@id/textview_card_update_status"
			app:layout_constraintTop_toBottomOf="@id/textview_card_update_status" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>